--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>My LWC App</title>
+        <title>Blog-Vishal Sharma</title>
+        <link rel="stylesheet" href="/resources/normalize.css"/>
         <style>
             body {
                 font-family: Arial, Helvetica, sans-serif;
@@ -14,6 +15,8 @@
         </style>
         <meta name="viewport" content="width=device-width,initial-scale=1" />
         <link rel="shortcut icon" href="/resources/favicon.ico" />
+       
+        
     </head>
     <body>
         <my-app></my-app>
