--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Blog-Vishal Sharma</title>
-        <link rel="stylesheet" href="/resources/normalize.css"/>
+        <link rel="stylesheet" href="/resources/normalize.css" />
         <style>
             body {
                 font-family: Arial, Helvetica, sans-serif;
@@ -14,9 +14,7 @@
             }
         </style>
         <meta name="viewport" content="width=device-width,initial-scale=1" />
-        <link rel="shortcut icon" href="/resources/favicon.ico" />
-       
-        
+        <!-- <link rel="shortcut icon" href="/resources/favicon.ico" /> -->
     </head>
     <body>
         <my-app></my-app>
